k8s/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stackdriver-example-backend
  labels:
    app: stackdriver-example
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stackdriver-example
      tier: backend
  template:
    metadata:
      labels:
        app: stackdriver-example
        tier: backend
    spec:
     containers:
      - name: backend
        image: stackdriver-example-backend
        ports:
        - name: http-server
          containerPort: 8080
