k8s/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stackdriver-example-frontend
  labels:
    app: stackdriver-example
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stackdriver-example
      tier: frontend
  template:
    metadata:
      labels:
        app: stackdriver-example
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: stackdriver-example-frontend
        ports:
        - name: http-server
          containerPort: 8080
