k8s/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stackdriver-example-backend
  labels:
    app: stackdriver-example
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: stackdriver-example
    tier: backend
  ports:
  - port: 8080
    targetPort: http-server
