k8s/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stackdriver-example-frontend
  labels:
    app: stackdriver-example
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: stackdriver-example
    tier: frontend
  ports:
  - port: 8080
    targetPort: http-server
