k8s/mongo.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stackdriver-example
    tier: db
  name: stackdriver-example-mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: stackdriver-example
    tier: db
