k8s/frontend.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: stackdriver-example
    tier: frontend
  name: stackdriver-example-frontend
spec:
  rules:
  - host: guestbook.learn.chuka.dev
    http:
      paths:
      - backend:
          serviceName: stackdriver-example-frontend
          servicePort: 8080
        path: /
  # tls:
  # - hosts:
  #   - guestbook.learn.chuka.dev
  #   secretName: guestbook-learn-chuka-dev-tls
